# riichi-mahjong-calculator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Snippet.hs  riichi-mahjong.cabal
app/: Main.hs
src/: Calculator.hs  Game.hs  Hand.hs  Match.hs  Meld.hs  Melds.hs  Parser.hs  Player.hs  Rule.hs  Rules.hs  Score.hs  Table.hs  Tile.hs  Tiles.hs  Wall.hs
test/: Spec.hs
