cabal-version:      2.4
name:               riichi-mahjong
version:            0.1.0.0
synopsis:           An implementation of Japanese Riichi Mahjong in Haskell

-- A longer description of the package.
-- description:
homepage:           github.com/mario31274/riichi-mahjong

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Jason Huang
maintainer:         26250287+mario31274@users.noreply.github.com

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Tiles,
                      Melds,
                      Wall

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable riichi-mahjong
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        riichi-mahjong

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite riichi-mahjong-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.2.0,
        QuickCheck,
        riichi-mahjong,
        hspec,
        hspec-expectations,
        HUnit,
